--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -82,7 +82,7 @@
                         <li class="current">
                             <em>数据运营</dd>
                             <i class="glyphicon glyphicon-triangle-bottom"></i>
-                            <img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
+<!--                             <img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;"> -->
                             </em>
 
                             <div class="TDsec-nav">
@@ -91,8 +91,8 @@
                                         <dt><i></i>运营数据</dt>
                                         <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
                                         <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
-                                        <dd style="position:relative;"><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
-                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
+                                        </dd>
                                         <dd id="city_net"><a href="javascript:goToCityNet()"><span class="fa fa-institution"></span>线下网络体系</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
@@ -111,8 +111,8 @@
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>档案数据</dt>
-                                        <dd style="position:relative;"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a>
-                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a>
+                                        </dd>
                                         <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
                                         <dd><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
@@ -134,14 +134,13 @@
                         <li>
                             <em>数据模型 </dd>
                             <i class="glyphicon glyphicon-triangle-bottom"></i>
-                            <img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
                             </em>
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                 	<dl class="col-sm-3">
                                         <dt><i></i>产品模型</dt>
-                                        <dd style="position:relative;" id="member_analysis"><a href="javascript:toToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
-                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd id="member_analysis"><a href="javascript:toToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
+                                        </dd>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>社区模型</dt>
@@ -189,7 +188,9 @@
                             </div>
                         </li>
                         <li>
-                            <em>数据分析<i class="glyphicon glyphicon-triangle-bottom"></i></em>
+                            <em>数据分析<i class="glyphicon glyphicon-triangle-bottom"></i>
+                            	<img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
+                            </em>
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="col-sm-3">
@@ -200,7 +201,8 @@
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>运营专题</dt>
-                                        <dd><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a></dd>
+                                        <dd style="position:relative;"><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a>
+                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                 </div>
                             </div>
