--- a/WebContent/data_access/observe_paramter_add.html
+++ b/WebContent/data_access/observe_paramter_add.html
@@ -214,11 +214,11 @@
 	<table width="100%">
 		<tr>
 			<td width="20%">
-				<p>明查月份：<span style="color: red" id="statistics">*</span></p>
+				<p>明查月份：</p>
 				<p><input type="text" readonly style="background:#CCCCCC" id="observe_month" name="observe_month"></p>
 			</td>
 			<td width="20%">
-				<p>检查人：</p>
+				<p>检查人：<span style="color: red">*</span></p>
 				<p><input type="text" name="observe_person" id="observe_person"/></p>
 			</td>
 			<td width="20%">
