--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -176,6 +176,7 @@
                                         <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
                                         <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
+                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>绩效数据</dt>
@@ -2382,7 +2383,7 @@ function initStoreHistoryGMV(){
        var index = params.dataIndex;
        var ref =  /-/g;
        var dayTime = option2.xAxis.data[params.dataIndex].replace(ref,"/");
-       var flagBar = encode64("1");//标记是从门店页面柱状图跳入
+       var flagBar = encode64("2");//标记是从门店页面柱状图跳入
 
        var url  = "user_member_view.html?t="+encode64('2')+"&r=&c=&cn="+encode64(currentStore.cityName)+"&e="+encode64(EMPLOYEE_ID)+"&beTi="+encode64(dayTime)+"&endT="+encode64(dayTime)+"&s="+encode64(currentStore.store_id)+"&so="+encode64(currentStore.storeno)+"&sn="+encode64(currentStore.name)+"&fb="+flagBar;
        window.open(url,"user_member_view");
@@ -3236,6 +3237,13 @@ function initStoreHistoryGMV(){
         };
 
 
+
+    //合作社社员统计
+    function goToUserMember(){
+        var flagBar = encode64("2");//标记是从门店页面柱状图跳入
+        var url  = "user_member_view.html?t="+encode64('2')+"&r=&c=&cn="+encode64(currentStore.cityName)+"&e="+encode64(EMPLOYEE_ID)+"&beTi=&endT=&s="+encode64(currentStore.store_id)+"&so="+encode64(currentStore.storeno)+"&sn="+encode64(currentStore.name)+"&fb="+flagBar;
+        window.open(url,"user_member_view");
+    }
 </script>
 </body>
 
