提交总部首页221GMV走势

--- a/WebContent/bizbase/modifypwd.html
+++ b/WebContent/bizbase/modifypwd.html
@@ -512,7 +512,7 @@ function doUpdate(){
 						if (data.result) {
 							var defaultInfo = $.fromJSON(data.data);
 							if(defaultInfo.code==9000033){
-								$("#login_error_msg").html(defaultInfo.message);
+								$("#login_error_msg").html("该电话号码无效！");
 								/* $("#msgdetail").html("该电话号码无效！"); */
 								clearInterval(interval);
 								$("#sendCodeBtn").attr("disabled",false);
