--- a/WebContent/crm/221_store.html
+++ b/WebContent/crm/221_store.html
@@ -107,9 +107,9 @@
       
       <div class="nav-tabs-custom">
        <ul class="nav nav-tabs">
-         <li><a href="javascript:void(0);" onclick="toIndex()" data-toggle="tab">211合计</a></li>
+         <li><a href="javascript:void(0);" onclick="toIndex()" data-toggle="tab">221合计</a></li>
          <li style="padding-top: 20px; color: rgba(0,0,0,0.3)">\</li>
-         <li><a href="javascript:void(0);" onclick="toBussiness()">211分业务</a></li>
+         <li><a href="javascript:void(0);" onclick="toBussiness()">221分业务</a></li>
          <li style="padding-top: 20px; color: rgba(0,0,0,0.3)">\</li>
          <li class="active"><a href="javascript:void(0);" data-toggle="tab">221单店</a></li>
        </ul>
@@ -123,7 +123,7 @@
                 <div class="small-box bg-aqua-active">
                   <div class="inner">
                     <h3><sup style="font-size: 20px" id="yestodayTotalGmv">载入中...</sup></h3>
-                    <p>整体GMV</p>
+                    <p>总计GMV</p>
                   </div>
                   <div class="icon">
                     <i class="fa fa-cny"></i>
@@ -157,6 +157,16 @@
                 <div class="item">
                   <div class="clearfix" style="max-width:474px;">
                     <ul id="image-gallery" class="gallery list-unstyled cS-hidden">
+                    	<li data-thumb="img/thumb/cS-1.jpg">
+                          <h4>门店名称&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="pull-center">店长：XXXX</span></h4>
+                          <div class="col-sm-12">
+                          	<div class="col-sm-6 no-padding">昨日GMV：</br><span><small>￥</small>0</span></div>
+                            <div class="col-sm-6 no-padding">商品类GMV：</br><span><small>￥</small>0</span></div>
+                            <div class="col-sm-6 no-padding">商品类GMV：</br><span><small>￥</small>0</span></div>
+                            <div class="col-sm-6 no-padding">商品类GMV：</br><span><small>￥</small>0</span></div>
+                          </div>
+                          <div class="col-sm-6" style="margin-top: 20px;">社员新增：<span><small>￥</small>0人</span></div>
+                        </li>
                     </ul>
                   </div>
                 </div>
@@ -480,8 +490,6 @@
 						}
 					}
 			},false);
-		  $("#totalGmv").html(changeMoney(parseInt(yyGMV)+parseInt(jwsGMV)));
-		  $("#avgGmv").html(changeMoney(((parseInt(yyGMV)+parseInt(jwsGMV))/96).toFixed(2)));
 	}
 	
 	var grouponGMV = '0';
@@ -499,6 +507,8 @@
 						}
 					}
 			},false);
+		  $("#totalGmv").html(changeMoney(parseInt(yyGMV)+parseInt(jwsGMV)+parseInt(grouponGMV)));
+		  $("#avgGmv").html(changeMoney(((parseInt(yyGMV)+parseInt(jwsGMV)+parseInt(grouponGMV))/96).toFixed(2)));
 	}
 	
 	var yestoday_yyGMV = '0';
