--- a/WebContent/crm/221_store.html
+++ b/WebContent/crm/221_store.html
@@ -386,12 +386,10 @@
 
 	$(function(){
 		initallstore();
-		inintMemberData();
-		inintYYGmvData();
-		inintJWSGmvData();
-		inintGrouponGmvData();
+		inintTotalGmvData();
 		inintYestodayGmvData();
 		initStoreCompleteInfo();
+		inintMemberData();
 		//单店GMV排名
 		showYestodayGmvRanking();
 		//单店商品类GMV排名
@@ -460,50 +458,22 @@
 	
 	var yyGMV = '0';
 	var yy_dept_id = "1";//优易+老年之家（养老餐）
-	function inintYYGmvData(){
-		  doManager("strategyActivityManager","queryStrategyGMV",[yy_dept_id,null,start_time,end_time],
-				function(datax,textStatus,XmlHttpRequest){
-					if (datax.result) {
-						var jsonData = $.fromJSON(datax.data);
-						if(Object.keys(jsonData).length!=0){
-							yyGMV = jsonData.total_gmv;
-							$("#yyGmv").html(changeMoney(parseInt(yyGMV)));
-						}else{
-							$("#yyGmv").html('0');
-						}
-					}
-			},false);
-	}
-	
 	var jwsGMV = '0';
 	var jws_dept_id = "2";//家务事
-	function inintJWSGmvData(){
-		  doManager("strategyActivityManager","queryStrategyGMV",[jws_dept_id,null,start_time,end_time],
-				function(datax,textStatus,XmlHttpRequest){
-					if (datax.result) {
-						var jsonData = $.fromJSON(datax.data);
-						if(Object.keys(jsonData).length!=0){
-							jwsGMV = jsonData.total_gmv;
-							$("#jwsGmv").html(changeMoney(parseInt(jwsGMV)));
-						}else{
-							$("#jwsGmv").html('0');
-						}
-					}
-			},false);
-	}
-	
 	var grouponGMV = '0';
 	var groupon_dept_id = "3";
-	function inintGrouponGmvData(){
-		  doManager("strategyActivityManager","queryGrouponGMV",[groupon_dept_id,null,start_time,end_time],
+	function inintTotalGmvData(){
+		  doManager("strategyActivityManager","queryStrategyGMV",[start_time,end_time],
 				function(datax,textStatus,XmlHttpRequest){
 					if (datax.result) {
 						var jsonData = $.fromJSON(datax.data);
 						if(Object.keys(jsonData).length!=0){
-							grouponGMV = jsonData.total_gmv;
+							yyGMV = jsonData.pro_total_gmv;
+							$("#yyGmv").html(changeMoney(parseInt(yyGMV)));
+							jwsGMV = jsonData.ser_total_gmv;
+							$("#jwsGmv").html(changeMoney(parseInt(jwsGMV)));
+							grouponGMV = jsonData.gro_total_gmv;
 							$("#grouponGmv").html(changeMoney(parseInt(grouponGMV)));
-						}else{
-							$("#grouponGmv").html('0');
 						}
 					}
 			},false);
@@ -513,39 +483,20 @@
 	
 	var yestoday_yyGMV = '0';
 	function inintYestodayGmvData(){
-		  doManager("strategyActivityManager","queryStrategyGMV",[yy_dept_id,null,yestoday_time,yestoday_time],
+		  doManager("strategyActivityManager","queryStrategyGMV",[yestoday_time,yestoday_time],
 				function(datax,textStatus,XmlHttpRequest){
 					if (datax.result) {
 						var jsonData = $.fromJSON(datax.data);
 						if(Object.keys(jsonData).length!=0){
-							yestoday_yyGMV = jsonData.total_gmv;
+							yestoday_yyGMV = jsonData.pro_total_gmv;
+							yestoday_jwsGMV = jsonData.ser_total_gmv;
+							yestoday_grouponGMV = jsonData.gro_total_gmv;
 						}
 					}
 			},false);
+		  $("#yestodayTotalGmv").html(changeMoney(parseInt(yestoday_yyGMV)+parseInt(yestoday_jwsGMV)+parseInt(yestoday_grouponGMV)));
+		  $("#yestodayAvgGmv").html(changeMoney(((parseInt(yestoday_yyGMV)+parseInt(yestoday_jwsGMV)+parseInt(yestoday_grouponGMV))/96).toFixed(2)));
 		  
-		  doManager("strategyActivityManager","queryStrategyGMV",[jws_dept_id,null,yestoday_time,yestoday_time],
-				function(datax,textStatus,XmlHttpRequest){
-					if (datax.result) {
-						var jsonData = $.fromJSON(datax.data);
-						if(Object.keys(jsonData).length!=0){
-							yestoday_jwsGMV = jsonData.total_gmv;
-						}
-					}
-			},false);
-		  
-		  doManager("strategyActivityManager","queryStrategyGMV",[groupon_dept_id,null,yestoday_time,yestoday_time],
-				function(datax,textStatus,XmlHttpRequest){
-					if (datax.result) {
-						var jsonData = $.fromJSON(datax.data);
-						if(Object.keys(jsonData).length!=0){
-							yestoday_grouponGMV = jsonData.total_gmv;
-							$("#yestodayTotalGmv").html(changeMoney(parseInt(yestoday_yyGMV)+parseInt(yestoday_jwsGMV)+parseInt(yestoday_grouponGMV)));
-							$("#yestodayAvgGmv").html(changeMoney(((parseInt(yestoday_yyGMV)+parseInt(yestoday_jwsGMV)+parseInt(yestoday_grouponGMV))/96).toFixed(2)));
-						}else{
-							$("#yestodayAvgGmv").html('0');
-						}
-					}
-			});
 	}
 	
 	function initStoreCompleteInfo(store_no){
