--- a/WebContent/crm/loginplatform.html
+++ b/WebContent/crm/loginplatform.html
@@ -509,8 +509,8 @@ $(document).ready(function(){
 
     $("#tofour").click(function(){
 
-		window.location.href='http:\/\/10.16.31.242:8090/GAform/user/loginActionDaqWeb?code='+currentUser.code+'&user_id='+currentUser.id;
-		//layer.alert("尚未开放，敬请期待。");
+		//window.location.href='http:\/\/10.16.31.103:8080/GAform/user/loginActionDaqWeb?code='+currentUser.code+'&user_id='+currentUser.id;
+		layer.alert("尚未开放，敬请期待。");
     	//开通功能后。需要添加 登录选择历史记录 调用  saveAccessLog(currentUser,'云表单系统');
    	 /* if(sysauth.indexOf('dataScore')>-1){
    		 	//开通后，更改此外 添加跳转连接 
