修改异常订单申诉样式及提示信息

--- a/WebContent/crm/appeal_detail.html
+++ b/WebContent/crm/appeal_detail.html
@@ -44,24 +44,36 @@
 <!-- Site wrapper -->
 <div class="wrapper">
 
+
  <header class="main-header">
-    <!-- Logo -->
-
-    <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
-      <!-- Sidebar toggle button-->
       <div class="container">
-
+					<div class="logo_img pull-left">
+						<img src="dist/img/logo.png" height="30">
+						<img src="dist/img/title.png" height="20">
+					</div>
+					<div class="pull-left">
+						<div class="logo-lg">
+							<ul class="no-margin">
+								<li class="current"><em>订单申诉</em></li>
+							</ul>
+						</div>
+					</div>
+      </div>
+    </nav>
+  </header>
+  
+<!--  <header class="main-header">
+    <nav class="navbar navbar-static-top">
+      <div class="container">
         <div class="pull-left">
            <nav class="navbar navbar-static-top no-margin">
-            <!-- Sidebar toggle button-->
-
             <div class="logo-lg clearfix">
               <div class="logo-lg clearfix">
 	            <ul>
 	              <li><a href="javascript:parent.location.reload();" class="h2"> <img src="dist/img/logo.png"> </a></li>
 	              <li class="nav-mark"><a href="#">订单申诉</a> </li>
-	              <li><!-- <a href="user.html#user">片区信息</a> --> </li>
+	              <li><a href="user.html#user">片区信息</a> </li>
 	              <li></li>
 	            </ul>
 	          </div>
@@ -70,7 +82,7 @@
         </div>
       </div>
     </nav>
-  </header>
+  </header> -->
 
   <!-- =============================================== -->
 
