--- a/WebContent/hr/exceptionorder.html
+++ b/WebContent/hr/exceptionorder.html
@@ -122,7 +122,7 @@
                       target="hframe">
                         <!-- <input id="upfile" type="file" isuploadtable="true" name="file" class="form-control" multiple="" onchange="upload_file_mult()"> -->
                         <input id="upfile" type="file" isuploadtable="true" name="file" class="form-control" onchange="pre_upload_file_mult()">
-                        <span class="users-list-date">当附件为多个，建议转换成压缩包RAR格式上传</span>
+                        <span class="users-list-date">当附件为多个，建议转换成压缩包ZIP格式上传</span>
                         <iframe name="hframe" id="hframe" style=" display: none"></iframe>
                 </form>
                 <label id="ret"></label>
